Add Open API documentation for all event endpoints
